# cppimagefilterbase

./: .gitignore  BlackWhite.cpp  BlackWhite.h  Blur.cpp  Blur.h  CMakeLists.txt  Convolutional.cpp  Convolutional.h  Edge.cpp  Edge.h  Filter.cpp  Filter.h  Red.cpp  Red.h  Threshold.cpp  Threshold.h  configReader.cpp  configReader.h  main.cpp
